src/objects/cb5__CBCalculationRule__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cb5__CBFolder__c.cb5__FolderType__c</field>
                <operation>equals</operation>
                <value>Calculation Rule</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cb5__CBFolder__c</referenceTo>
        <relationshipLabel>CB Calculation Rule Folders</relationshipLabel>
        <relationshipName>CB_CR_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>cb5__CBScenario__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Formula__c</fullName>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one-to-one</fullName>
                    <default>true</default>
                    <label>one-to-one</label>
                </value>
                <value>
                    <fullName>many-to-one</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__NFL1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL1</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodShift__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Shift</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ResultName__c</fullName>
        <defaultValue>&apos;Auto Line&apos;</defaultValue>
        <label>Result Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceChildFilter__c</fullName>
        <label>Source Child Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__SourceParentFilter__c</fullName>
        <label>Source Parent Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Value__c</fullName>
        <label>Value</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__copyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyBudgetYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyBudgetYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyDivision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyDivision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyScenario__c</fullName>
        <defaultValue>true</defaultValue>
        <label>copyScenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyVariable1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyVariable2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__copyVariable3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable3</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Calculation Rule</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Calculation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Calculation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cb5__CalcRuleType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(cb5__CBFolder__c &lt;&gt; null,NOT(ISPICKVAL(cb5__CBFolder__r.cb5__FolderType__c, &apos;Calculation Rule&apos;)))</errorConditionFormula>
        <errorDisplayField>cb5__CBFolder__c</errorDisplayField>
        <errorMessage>Folder type must be &apos;Calculation Rule&apos;</errorMessage>
    </validationRules>
</CustomObject>